[project]
name = "owl-masker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.1",
    "pymupdf>=1.26.3",
    "pytesseract>=0.3.13",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.4",
]
